k3s/cluster/apps/nas-attached/music-stack/soulsync/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulsync
  namespace: soulsync
spec:
  selector:
    app.kubernetes.io/name: soulsync
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: spotify-oauth
      port: 8888
      targetPort: spotify-oauth
    - name: tidal-oauth
      port: 8889
      targetPort: tidal-oauth
